<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SqliteTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="Button01">create database</string>
    <string name="Button02">update database</string>
    <string name="Button03">insert</string>
    <string name="Button04">update</string>
    <string name="Button05">query</string>
    
    <string name="Button06">确定</string>
    <string name="Button07">取消</string>

    
    
</resources>
